[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme/mainTheme.tres" type="Theme" id=1]
[ext_resource path="res://img/ButtonFrame.png" type="Texture" id=2]
[ext_resource path="res://menu/#Button.gd" type="Script" id=3]
[ext_resource path="res://Assets/click.wav" type="AudioStream" id=4]

[node name="#Button" type="Button"]
anchor_right = 1.0
margin_bottom = 6.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="HC" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 1

[node name="TR_Left" type="TextureRect" parent="HC"]
margin_left = 71.0
margin_right = 87.0
margin_bottom = 9.0
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Label" type="Label" parent="HC"]
margin_left = 91.0
margin_right = 100.0
margin_bottom = 9.0
size_flags_vertical = 3
text = "???"
align = 1
valign = 1

[node name="TR_Right" type="TextureRect" parent="HC"]
margin_left = 104.0
margin_right = 120.0
margin_bottom = 9.0
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 4
flip_h = true

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0

[connection signal="focus_entered" from="." to="." method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Button_focus_exited"]
